<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.fragments.MovieDetailsFragment"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movieIVID"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movieID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/subTitleID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_title"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/movieInfoID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_info"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/releaseDateID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/release_date"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/dateRelID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ratingID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <RatingBar
                    android:id="@+id/rateID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleY="0.8"
                    android:scaleX="0.8"
                    android:numStars="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/runtimeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/runtimeTimeID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/budgetID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/bugjetMoneyID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/revenueID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/revenue"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/revenueMoneyID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/overviewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/overviewPID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>